--- a/.gitignore
+++ b/.gitignore
@@ -238,3 +238,40 @@ WebOauth2/obj/Debug/WebOauth2.pdb
 .vs/config/applicationhost.config
 .vs/WebOauth2/v14/.suo
 .vs/WebOauth2/v14/.suo
+packages/System.ValueTuple.4.5.0/.signature.p7s
+packages/System.ValueTuple.4.5.0/lib/MonoAndroid10/_._
+packages/System.ValueTuple.4.5.0/lib/MonoTouch10/_._
+packages/System.ValueTuple.4.5.0/lib/net461/System.ValueTuple.dll
+packages/System.ValueTuple.4.5.0/lib/net461/System.ValueTuple.xml
+packages/System.ValueTuple.4.5.0/lib/net47/System.ValueTuple.dll
+packages/System.ValueTuple.4.5.0/lib/net47/System.ValueTuple.xml
+packages/System.ValueTuple.4.5.0/lib/netcoreapp2.0/_._
+packages/System.ValueTuple.4.5.0/lib/netstandard1.0/System.ValueTuple.dll
+packages/System.ValueTuple.4.5.0/lib/netstandard1.0/System.ValueTuple.xml
+packages/System.ValueTuple.4.5.0/lib/netstandard2.0/_._
+packages/System.ValueTuple.4.5.0/lib/portable-net40+sl4+win8+wp8/System.ValueTuple.dll
+packages/System.ValueTuple.4.5.0/lib/portable-net40+sl4+win8+wp8/System.ValueTuple.xml
+packages/System.ValueTuple.4.5.0/lib/uap10.0.16299/_._
+packages/System.ValueTuple.4.5.0/lib/xamarinios10/_._
+packages/System.ValueTuple.4.5.0/lib/xamarinmac20/_._
+packages/System.ValueTuple.4.5.0/lib/xamarintvos10/_._
+packages/System.ValueTuple.4.5.0/lib/xamarinwatchos10/_._
+packages/System.ValueTuple.4.5.0/LICENSE.TXT
+packages/System.ValueTuple.4.5.0/ref/MonoAndroid10/_._
+packages/System.ValueTuple.4.5.0/ref/MonoTouch10/_._
+packages/System.ValueTuple.4.5.0/ref/net461/System.ValueTuple.dll
+packages/System.ValueTuple.4.5.0/ref/net47/System.ValueTuple.dll
+packages/System.ValueTuple.4.5.0/ref/netcoreapp2.0/_._
+packages/System.ValueTuple.4.5.0/ref/netstandard2.0/_._
+packages/System.ValueTuple.4.5.0/ref/portable-net40+sl4+win8+wp8/System.ValueTuple.dll
+packages/System.ValueTuple.4.5.0/ref/uap10.0.16299/_._
+packages/System.ValueTuple.4.5.0/ref/xamarinios10/_._
+packages/System.ValueTuple.4.5.0/ref/xamarinmac20/_._
+packages/System.ValueTuple.4.5.0/ref/xamarintvos10/_._
+packages/System.ValueTuple.4.5.0/ref/xamarinwatchos10/_._
+packages/System.ValueTuple.4.5.0/System.ValueTuple.4.5.0.nupkg
+packages/System.ValueTuple.4.5.0/THIRD-PARTY-NOTICES.TXT
+packages/System.ValueTuple.4.5.0/useSharedDesignerContext.txt
+packages/System.ValueTuple.4.5.0/version.txt
+WebOauth2/bin/System.ValueTuple.dll
+WebOauth2/bin/System.ValueTuple.xml
