--- a/WebOauth2/packages.config
+++ b/WebOauth2/packages.config
@@ -29,4 +29,5 @@
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
 </packages>
